完成了商品分类页面的功能

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,6 +1,9 @@
 .el-card {
-  box-shadow: 0 1px 1px #ccc!important;
+  box-shadow: 0 1px 1px #ccc !important;
 }
-.mainTable{
+.mainTable {
   margin-top: 20px;
+}
+.paginationWrap {
+  margin-top: 15px;
 }
