完成了商品列表页面的部分功能

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -7,3 +7,9 @@
 .paginationWrap {
   margin-top: 15px;
 }
+.searchWrap .el-input {
+  margin-right: 14px;
+}
+.searchWrap .inputArea {
+  min-width: 300px;
+}
